--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
-    "body-parser": "latest",
-    "express": "^4.17.1",
+    "body-parser": "^1.20.0",
+    "express": "^4.17.3",
     "node-postgres": "^0.1.4",
-    "nodemon": "^2.0.14",
-    "pg": "^8.7.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
     "request": "^2.88.2",
     "util": "^0.12.4",
     "vk-easy": "^1.4.1"
