--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "description": "",
   "engines": {
-    "node": "14.x"
+    "node": "16.6.2"
   },
   "main": "app.js",
   "scripts": {
@@ -22,7 +22,7 @@
     "pg": "^8.7.3",
     "request": "^2.88.2",
     "util": "^0.12.4",
-    "vk-easy": "^1.4.1"
+    "vk-io": "^4.5.2"
   },
   "devDependencies": {
     "request": "^2.88.2"
