--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "pg": "^8.7.3",
-    "request": "^2.88.2",
     "util": "^0.12.4",
-    "vk-io": "^4.5.2"
+    "vk-io": "^4.5.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
