--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "pg": "^8.7.3",
     "util": "^0.12.4",
-    "vk-io": "^4.5.2",
-    "request": "^2.88.2"
+    "vk-io": "^4.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
