--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "vk-io": "^4.5.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.15"
   }
 }
