--- a/package.json
+++ b/package.json
@@ -3,25 +3,37 @@
   "version": "1.2.0",
   "description": "",
   "engines": {
-    "node": "16.6.2"
+    "node": ">=18.0.0"
   },
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "app": "node app.js",
-    "test": "node test.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "nodemon test.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "D.Pustoshilov",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.26.1",
+    "axios": "^1.5.0",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.3.1",
     "express": "^4.17.3",
     "pg": "^8.7.3",
+    "require.js": "^1.0.0",
     "util": "^0.12.4",
-    "vk-io": "^4.5.2"
+    "vk-io": "^4.8.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "nodemon": "^3.0.1",
+    "why-is-node-running": "^2.2.2"
   }
 }
